--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -15,7 +15,7 @@ clean-targets:
     - "logs"
 
 models:
-  jaffle_shop:
+  incremental:
       materialized: table
       staging:
         materialized: view
